@@ -114,16 +114,6 @@ name|org
 operator|.
 name|junit
 operator|.
-name|AfterClass
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
 name|BeforeClass
 import|;
 end_import
@@ -140,21 +130,6 @@ name|UpdateRequestProcessorFactoryTest
 extends|extends
 name|AbstractSolrTestCase
 block|{
-DECL|field|SAVED_LEVEL
-specifier|private
-specifier|static
-name|org
-operator|.
-name|apache
-operator|.
-name|log4j
-operator|.
-name|Level
-name|SAVED_LEVEL
-init|=
-literal|null
-decl_stmt|;
-comment|// SOLR-7603 - remove
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -166,81 +141,11 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-comment|// SOLR-7603 - remove
-name|SAVED_LEVEL
-operator|=
-name|org
-operator|.
-name|apache
-operator|.
-name|log4j
-operator|.
-name|LogManager
-operator|.
-name|getRootLogger
-argument_list|()
-operator|.
-name|getLevel
-argument_list|()
-expr_stmt|;
-name|org
-operator|.
-name|apache
-operator|.
-name|log4j
-operator|.
-name|LogManager
-operator|.
-name|getRootLogger
-argument_list|()
-operator|.
-name|setLevel
-argument_list|(
-name|org
-operator|.
-name|apache
-operator|.
-name|log4j
-operator|.
-name|Level
-operator|.
-name|DEBUG
-argument_list|)
-expr_stmt|;
 name|initCore
 argument_list|(
 literal|"solrconfig-transformers.xml"
 argument_list|,
 literal|"schema.xml"
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|AfterClass
-DECL|method|fixLogLevelAfterClass
-specifier|public
-specifier|static
-name|void
-name|fixLogLevelAfterClass
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-comment|// SOLR-7603 - remove
-name|org
-operator|.
-name|apache
-operator|.
-name|log4j
-operator|.
-name|LogManager
-operator|.
-name|getRootLogger
-argument_list|()
-operator|.
-name|setLevel
-argument_list|(
-name|SAVED_LEVEL
 argument_list|)
 expr_stmt|;
 block|}
